# CrossMon

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_release.bat  test_gpu_quick.bat
include/: cpu_monitor.hpp  gpu_monitor.hpp  memory_monitor.hpp  npu_monitor.hpp
include/utils/: monitor_args.hpp  monitor_utils.hpp  output_formatter.hpp  process_manager.hpp  statistics.hpp
scripts/: README.md  README_NEW.md  build_and_test_macos.sh  build_and_test_windows.bat  run_tests_macos.sh  run_tests_windows.bat  test_app_monitoring_macos.sh  test_app_monitoring_windows.bat  test_gpu_detection_macos.sh  test_gpu_detection_windows.bat  test_npu_detection_macos.sh  test_npu_detection_windows.bat  test_quick_macos.sh  test_quick_windows.bat
src/: main.cpp
src/macos/: cpu_monitor_mac.cpp  gpu_monitor_mac.cpp  memory_monitor_mac.cpp  npu_monitor_mac.cpp
src/utils/: monitor_args.cpp  monitor_utils.cpp  output_formatter.cpp  process_manager.cpp  statistics.cpp
src/windows/: cpu_monitor_win.cpp  gpu_monitor_win.cpp  memory_monitor_win.cpp  npu_monitor_win.cpp
test/: test_cpu_monitor_mac.cpp  test_cpu_monitor_win.cpp  test_gpu_monitor_mac.cpp  test_gpu_monitor_win.cpp  test_monitor_args.cpp  test_npu_monitor_mac.cpp  test_npu_monitor_win.cpp  test_process_manager.cpp  test_statistics.cpp
